--- a/FoodieJoint_Admin/index.html
+++ b/FoodieJoint_Admin/index.html
@@ -25,7 +25,7 @@ let userLog = sessionStorage.getItem('activeUser')
       window.location.replace("../login.html");
     }
     else {
-      window.location.replace("FoodieJoint_Admin/index.html");
+      window.location.replace("index.html");
     }
 
     
