--- a/FoodieJoint_Admin/index.html
+++ b/FoodieJoint_Admin/index.html
@@ -25,6 +25,7 @@ let userLog = sessionStorage.getItem('activeUser')
       window.location.replace("../login.html");
     }
 
+    location.reload();
     
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
